--- a/public/style.css
+++ b/public/style.css
@@ -382,3 +382,10 @@ form button:hover {
     font-weight: bold;
     border: 1px solid #d6eaf8;
 }
+.event-image {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 12px;
+    margin-bottom: 15px;
+}
